FIxed overflow issues

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 body {
 	background: linear-gradient(-45deg, #02011e, #002478);
 	height: 100vh;
+	overflow: hidden;
 }
 
 h1 {
